--- a/pages/products.html
+++ b/pages/products.html
@@ -17,9 +17,9 @@
         <div class="header__col">
           <nav class="header__nav">
             <ul class="header__list">
-              <li class="header__item"><a href="../index.html" class=header_link>Forsíða</a></li>
-              <li class="header__item"><a href="products.html" class=header_link>Vörur</a></li>
-              <li class="header__item"><a href="staff.html" class=header_link>Starfsfólk</a></li>
+              <li class="header__item"><a href="../index.html" class="header_link">Forsíða</a></li>
+              <li class="header__item"><a href="products.html" class="header_link">Vörur</a></li>
+              <li class="header__item"><a href="staff.html" class="header_link">Starfsfólk</a></li>
             </ul>
           </nav>
         </div>
@@ -40,7 +40,7 @@
           <div class="product">
             <div class="product__content">
               <div class="product__img">
-                <img class="product__image"src="../img/watch.jpg">
+                <img class="product__image" src="../img/watch.jpg" alt="Mynd af úri">
               </div>
               <div class="product__text">
                 <h2 class="product__title">Ótrúlegt úr</h2>
@@ -61,7 +61,7 @@
           <div class="product">
             <div class="product__content">
               <div class="product__img">
-                <img src="../img/pineapple.jpg">
+                <img src="../img/pineapple.jpg" alt="Mynd af ananas">
               </div>
               <div class="product__text">
                 <h2 class="product__title">Ananas drykkur</h2>
@@ -82,7 +82,7 @@
           <div class="product">
             <div class="product__content">
               <div class="product__img">
-                <img src="../img/gameboy.jpg">
+                <img src="../img/gameboy.jpg" alt="Mynd af leikjatölvu">
               </div>
               <div class="product__text">
                 <h2 class="product__title">Gameboy</h2>
@@ -103,7 +103,7 @@
           <div class="product">
             <div class="product__content">
               <div class="product__img">
-                <img src="../img/shoes.jpg">
+                <img src="../img/shoes.jpg" alt="Mynd af skóm">
               </div>
               <div class="product__text">
                 <h2 class="product__title">Hlaupaskór</h2>
@@ -124,7 +124,7 @@
           <div class="product">
             <div class="product__content">
               <div class="product__img">
-                <img src="../img/headphones.jpg">
+                <img src="../img/headphones.jpg" alt="Mynd af heyrnartólum">
               </div>
               <div class="product__text">
                 <h2 class="product__title">Hágæða heyrnartól</h2>
@@ -145,7 +145,7 @@
           <div class="product">
             <div class="product__content">
               <div class="product__img">
-                <img src="../img/camera.jpg">
+                <img src="../img/camera.jpg" alt="Mynd af myndavél">
               </div>
               <div class="product__text">
                 <h2 class="product__title">Mögnuð myndavél</h2>
@@ -171,7 +171,7 @@
         <div class="footer__col">
           <h3>Vöruflokkar</h3>
           <ul class="footer__list">
-            <li><a href="products.html"class="footer__link">Nauðsynjavörur</a></li>
+            <li><a href="products.html" class="footer__link">Nauðsynjavörur</a></li>
             <li><a href="products.html" class="footer__link">Frábærar vörur</a></li>
             <li><a href="products.html" class="footer__link">Ómissandi vörur</a></li>
             <li><a href="products.html" class="footer__link">Ótrúlegar vörur</a></li>
