--- a/pages/staff.html
+++ b/pages/staff.html
@@ -1,132 +1,135 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Starfsfólk</title>
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
-    <link rel="stylesheet" href="../grid.css">
-    <link rel="stylesheet" href="../styles.css">
-  </head>
-  <body>
-    <header class="header">
-      <div class="header__content">
-        <h1 class="header__title">Vöruhúsið</h1>
-        <div class="header__row">
-          <div class="header__col">
-            <nav class="header__nav">
-              <ul class="header__list">
-                <li class="header__item"><a href="../index.html" class=header_link>Forsíða</a></li>
-                <li class="header__item"><a href="products.html" class=header_link>Vörur</a></li>
-                <li class="header__item"><a href="staff.html" class=header_link>Starfsfólk</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="header__col">
-            <nav class="header__nav">
-              <ul class="header_list">
-                <li class="header__item header__item--button"><a href="cart.html">Karfa(3)</a></li>
-              </ul>
-            </nav>
-          </div>
+<html lang="is">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Starfsfólk</title>
+  <link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
+  <link rel="stylesheet" href="../grid.css">
+  <link rel="stylesheet" href="../styles.css">
+</head>
+
+<body>
+  <header class="header">
+    <div class="header__content">
+      <h1 class="header__title">Vöruhúsið</h1>
+      <div class="header__row">
+        <div class="header__col">
+          <nav class="header__nav">
+            <ul class="header__list">
+              <li class="header__item"><a href="../index.html" class="header_link">Forsíða</a></li>
+              <li class="header__item"><a href="products.html" class="header_link">Vörur</a></li>
+              <li class="header__item"><a href="staff.html" class="header_link">Starfsfólk</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header__col">
+          <nav class="header__nav">
+            <ul class="header_list">
+              <li class="header__item header__item--button"><a href="cart.html">Karfa(3)</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
-    </header>
-    <main>
-      <div class="staff">
-        <div class="staff__row">
-          <div class="staff__col">
-            <div class="card">
-              <div class="front">
-                <img class="karolina" src="../img/karolina.jpg" alt="Beautiful Karolina">
-              </div>
-              <div class="back">
-                <h2>Karólína Pálsdóttir</h2>
-                <p>Karólína er forstjóri Vöruhússins.</p>
-              </div>
+    </div>
+  </header>
+  <main>
+    <div class="staff">
+      <div class="staff__row">
+        <div class="staff__col">
+          <div class="card">
+            <div class="front">
+              <img class="karolina" src="../img/karolina.jpg" alt="Beautiful Karolina">
             </div>
-          </div>
-          <div class="staff__col">
-            <div class="card">
-              <div class="front">
-                <img class="tomas" src="../img/tomas.jpg" alt="Sexy Tomas">
-              </div>
-              <div class="back">
-                <h2>Tómas Jónsson</h2>
-                <p>Tómas sér um að koma vörunum til þín. Hratt og örugglega.</p>
-              </div>
+            <div class="back">
+              <h2>Karólína Pálsdóttir</h2>
+              <p>Karólína er forstjóri Vöruhússins.</p>
             </div>
           </div>
         </div>
-        <div class="staff__row">
-          <div class="staff__col">
-            <div class="card">
-              <div class="front">
-                <img class="anna" src="../img/anna.jpg" alt="Hot Anna">
-              </div>
-              <div class="back">
-                <h2>Anna Atladóttir</h2>
-                <p>Anna er forritari hjá Vöruhúsinu. Ef eitthvað er að, lagar Anna það.</p>
-              </div>
+        <div class="staff__col">
+          <div class="card">
+            <div class="front">
+              <img class="tomas" src="../img/tomas.jpg" alt="Sexy Tomas">
             </div>
-          </div>
-          <div class="staff__col">
-            <div class="card">
-              <div class="front">
-                <img class="jon" src="../img/jon.jpg" alt="Very Pretty Jon">
-              </div>
-              <div class="back">
-                <h2>Jón Guðmundsson</h2>
-                <p>Jón sér um peningana. Gefðu Jóni peninga með því að kaupa eitthvað klikkað hjá Vöruhúsinu.</p>
-              </div>
+            <div class="back">
+              <h2>Tómas Jónsson</h2>
+              <p>Tómas sér um að koma vörunum til þín. Hratt og örugglega.</p>
             </div>
           </div>
         </div>
       </div>
-    </main>
-    <footer class="footer">
-      <div class="footer__content">
-        <div class="footer__row">
-          <div class="footer__col">
-            <h3>Vöruflokkar</h3>
-            <ul class="footer__list">
-              <li><a href="products.html"class="footer__link">Nauðsynjavörur</a></li>
-              <li><a href="products.html" class="footer__link">Frábærar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Ómissandi vörur</a></li>
-              <li><a href="products.html" class="footer__link">Ótrúlegar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Magnaðar vörur</a></li>
-            </ul>
-          </div>
-          <div class="footer__col">
-            <h3>Vöruflokkar</h3>
-            <ul class="footer__list">
-              <li><a href="products.html" class="footer__link">Trylltar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Geggjaðar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Svakalegar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Fáránlegar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Klikkaðar vörur</a></li>
-            </ul>
-          </div>
-          <div class="footer__col">
-            <h3>Vöruflokkar</h3>
-            <ul class="footer__list">
-              <li><a href="products.html" class="footer__link">Nýjar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Gamlar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Skrítnar vörur</a></li>
-            </ul>
-          </div>
-          <div class="footer__col">
-            <h3>Síður</h3>
-            <ul class="footer__list">
-              <li><a href="products.html" class="footer__link">Allar vörur</a></li>
-              <li><a href="staff.html" class="footer__link">Starfsfólk</a></li>
-              <li><a href="cart.html" class="footer__link">Karfa</a></li>
-            </ul>
+      <div class="staff__row">
+        <div class="staff__col">
+          <div class="card">
+            <div class="front">
+              <img class="anna" src="../img/anna.jpg" alt="Hot Anna">
+            </div>
+            <div class="back">
+              <h2>Anna Atladóttir</h2>
+              <p>Anna er forritari hjá Vöruhúsinu. Ef eitthvað er að, lagar Anna það.</p>
+            </div>
           </div>
         </div>
-        <p class="footer__copyright">© 2018 Vöruhúsið</p>
+        <div class="staff__col">
+          <div class="card">
+            <div class="front">
+              <img class="jon" src="../img/jon.jpg" alt="Very Pretty Jon">
+            </div>
+            <div class="back">
+              <h2>Jón Guðmundsson</h2>
+              <p>Jón sér um peningana. Gefðu Jóni peninga með því að kaupa eitthvað klikkað hjá Vöruhúsinu.</p>
+            </div>
+          </div>
+        </div>
       </div>
-    </footer>
-  </body>
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="footer__content">
+      <div class="footer__row">
+        <div class="footer__col">
+          <h3>Vöruflokkar</h3>
+          <ul class="footer__list">
+            <li><a href="products.html" class="footer__link">Nauðsynjavörur</a></li>
+            <li><a href="products.html" class="footer__link">Frábærar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Ómissandi vörur</a></li>
+            <li><a href="products.html" class="footer__link">Ótrúlegar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Magnaðar vörur</a></li>
+          </ul>
+        </div>
+        <div class="footer__col">
+          <h3>Vöruflokkar</h3>
+          <ul class="footer__list">
+            <li><a href="products.html" class="footer__link">Trylltar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Geggjaðar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Svakalegar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Fáránlegar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Klikkaðar vörur</a></li>
+          </ul>
+        </div>
+        <div class="footer__col">
+          <h3>Vöruflokkar</h3>
+          <ul class="footer__list">
+            <li><a href="products.html" class="footer__link">Nýjar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Gamlar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Skrítnar vörur</a></li>
+          </ul>
+        </div>
+        <div class="footer__col">
+          <h3>Síður</h3>
+          <ul class="footer__list">
+            <li><a href="products.html" class="footer__link">Allar vörur</a></li>
+            <li><a href="staff.html" class="footer__link">Starfsfólk</a></li>
+            <li><a href="cart.html" class="footer__link">Karfa</a></li>
+          </ul>
+        </div>
+      </div>
+      <p class="footer__copyright">© 2018 Vöruhúsið</p>
+    </div>
+  </footer>
+</body>
+
 </html>
