laga html aðeins

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <nav class="header__nav">
               <ul class="header__list">
                 <li class="header__item"><a href="../index.html" class=header_link>Forsíða</a></li>
-                <li class="header__item"><a href="products.html" class=header_link>Vörur</a></li>
-                <li class="header__item"><a href="staff.html" class=header_link>Starfsfólk</a></li>
+                <li class="header__item"><a href="../products.html" class=header_link>Vörur</a></li>
+                <li class="header__item"><a href="../staff.html" class=header_link>Starfsfólk</a></li>
               </ul>
             </nav>
             <a href="cart.html" class="header__cart header__cart--button">Karfa(3)</a>
