gat ekki komist í cart

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li class="header__item"><a href="../pages/staff.html" class=header_link>Starfsfólk</a></li>
               </ul>
             </nav>
-            <a href="cart.html" class="header__cart header__cart--button">Karfa(3)</a>
+            <a href="../pages/cart.html" class="header__cart header__cart--button">Karfa(3)</a>
           </div>
         </div>
         </div>
