bæta aðgengileika eða hvað sem það heitir (og stafsetninga skoðanir)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="is">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -79,37 +79,37 @@
           <div class="footer__col">
             <h3>Vöruflokkar</h3>
             <ul class="footer__list">
-              <li><a href="products.html"class="footer__link">Nauðsynjavörur</a></li>
-              <li><a href="products.html" class="footer__link">Frábærar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Ómissandi vörur</a></li>
-              <li><a href="products.html" class="footer__link">Ótrúlegar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Magnaðar vörur</a></li>
+              <li><a href="../pages/products.html"class="footer__link">Nauðsynjavörur</a></li>
+              <li><a href="../pages/products.html" class="footer__link">Frábærar vörur</a></li>
+              <li><a href="../pages/products.html" class="footer__link">Ómissandi vörur</a></li>
+              <li><a href="../pages/products.html" class="footer__link">Ótrúlegar vörur</a></li>
+              <li><a href="../pages/products.html" class="footer__link">Magnaðar vörur</a></li>
             </ul>
           </div>
           <div class="footer__col">
             <h3>Vöruflokkar</h3>
             <ul class="footer__list">
-              <li><a href="products.html" class="footer__link">Trylltar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Geggjaðar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Svakalegar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Fáránlegar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Klikkaðar vörur</a></li>
+              <li><a href="../pages/products.html" class="footer__link">Trylltar vörur</a></li>
+              <li><a href="../pages/products.html" class="footer__link">Geggjaðar vörur</a></li>
+              <li><a href="../pages/products.html" class="footer__link">Svakalegar vörur</a></li>
+              <li><a href="../pages/products.html" class="footer__link">Fáránlegar vörur</a></li>
+              <li><a href="../pages/products.html" class="footer__link">Klikkaðar vörur</a></li>
             </ul>
           </div>
           <div class="footer__col">
             <h3>Vöruflokkar</h3>
             <ul class="footer__list">
-              <li><a href="products.html" class="footer__link">Nýjar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Gamlar vörur</a></li>
-              <li><a href="products.html" class="footer__link">Skrítnar vörur</a></li>
+              <li><a href="../pages/products.html" class="footer__link">Nýjar vörur</a></li>
+              <li><a href="../pages/products.html" class="footer__link">Gamlar vörur</a></li>
+              <li><a href="../pages/products.html" class="footer__link">Skrýtnar vörur</a></li>
             </ul>
           </div>
           <div class="footer__col">
             <h3>Síður</h3>
             <ul class="footer__list">
-              <li><a href="products.html" class="footer__link">Allar vörur</a></li>
-              <li><a href="staff.html" class="footer__link">Starfsfólk</a></li>
-              <li><a href="cart.html" class="footer__link">Karfa</a></li>
+              <li><a href="../pages/products.html" class="footer__link">Allar vörur</a></li>
+              <li><a href="../pages/staff.html" class="footer__link">Starfsfólk</a></li>
+              <li><a href="../pages/cart.html" class="footer__link">Karfa</a></li>
             </ul>
           </div>
         </div>
