--- a/pages/cart.html
+++ b/pages/cart.html
@@ -226,7 +226,7 @@
           <ul class="footer__list">
             <li><a href="products.html" class="footer__link">Nýjar vörur</a></li>
             <li><a href="products.html" class="footer__link">Gamlar vörur</a></li>
-            <li><a href="products.html" class="footer__link">Skrítnar vörur</a></li>
+            <li><a href="products.html" class="footer__link">Skrýtnar vörur</a></li>
           </ul>
         </div>
         <div class="footer__col">
