var products.html þar sem staff átti að vera

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </li>
             <li class="front__item">
               <div class="front__button">
-                <a href="pages/products.html" class="button button--large">Kynnast starfsfólki</a>
+                <a href="pages/staff.html" class="button button--large">Kynnast starfsfólki</a>
               </div>
             </li>
           </ul>
