lagfæringar við staff.scss og linka

--- a/pages/staff.html
+++ b/pages/staff.html
@@ -20,8 +20,8 @@
           <nav class="header__nav">
             <ul class="header__list">
               <li class="header__item"><a href="../index.html" class="header_link">Forsíða</a></li>
-              <li class="header__item"><a href="../pages/products.html" class="header_link">Vörur</a></li>
-              <li class="header__item"><a href="../pages/staff.html" class="header_link">Starfsfólk</a></li>
+              <li class="header__item"><a href="products.html" class="header_link">Vörur</a></li>
+              <li class="header__item"><a href="staff.html" class="header_link">Starfsfólk</a></li>
             </ul>
           </nav>
         </div>
